[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-finder"
version = "1.2.0"
description = "A robust proxy finding and management system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.1",
    "beautifulsoup4>=4.9.3",
    "rich>=10.0.0",
    "selenium>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
proxy-finder = "proxy_finder.cli:main"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']
